# vardict

./: .gitignore  changelog.md  pyproject.toml  readme.md
tests/: test_vardict.py
vardict/: __init__.py  vardict.py
