[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vardict"
authors = [
    {name = "Ruud van der Ham", email = "rt.van.der.ham@gmail.com"}
]
description = "vardict - dict with variables"
version = "1.0.0-1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "executing>=2.2.0",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only"
]
[project.urls]
Homepage = "https://github.com/salabim/vardict"
Repository = "https://github.com/salabim/vardict"

[tool.setuptools]
packages = ["vardict"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

